<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_current"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".fragment.StuCurrentFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_current_stu">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/current_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextAppearance="@style/Title"
                    android:background="@color/toolBar"
                    android:theme="@style/ToolbarIconColor"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_bar_current"
                        style="@style/Title"
                        android:layout_gravity="center"/>

                </androidx.appcompat.widget.Toolbar>



                <ImageView
                    android:id="@+id/deco_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/deco" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="13dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <!--搜索图标-->
                    <ImageButton
                        android:id="@+id/ib_reset_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/return_back"
                        android:layout_centerVertical="true"/>

                    <!--学期选择-->
                    <RelativeLayout
                        android:id="@+id/rl_term_choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/rl_status_choose"
                        android:layout_toLeftOf="@id/rl_status_choose"
                        android:background="@drawable/shape_drop_parent"
                        android:clickable="true"
                        android:onClick="onClick"
                        tools:ignore="OnClick">

                        <TextView
                            android:id="@+id/tv_term_show"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_vertical"
                            android:text="2000-2000-0" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_toEndOf="@id/tv_term_show"
                            android:layout_toRightOf="@id/tv_term_show"
                            android:scaleType="fitCenter"
                            android:src="@drawable/drop_list" />
                    </RelativeLayout>

                    <!--活动状态选择-->
                    <RelativeLayout
                        android:id="@+id/rl_status_choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/shape_drop_parent"
                        android:clickable="true"
                        android:onClick="onClick"
                        tools:ignore="OnClick"
                        android:focusable="true">

                        <TextView
                            android:id="@+id/tv_status_show"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginHorizontal="5dp"
                            android:gravity="center_vertical"
                             />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_toEndOf="@id/tv_status_show"
                            android:layout_toRightOf="@id/tv_status_show"
                            android:scaleType="fitCenter"
                            android:src="@drawable/drop_list" />

                    </RelativeLayout>

                </RelativeLayout>


                <!--劳动选项栏-->
                <RadioGroup
                    android:id="@+id/rg_type_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:weightSum="4">

                    <RadioButton
                        android:id="@+id/rb_daily_labour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/daily"
                        android:drawablePadding="2dp"
                        android:text="@string/dailyActivity"
                        android:textSize="12sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="#F3AB5C"
                        android:background="@drawable/selector_daily"
                        android:button="@null"
                        android:orientation="vertical"
                        />


                    <RadioButton
                        android:id="@+id/rb_create_labour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawablePadding="2dp"
                        android:drawableTop="@drawable/create"
                        android:text="@string/createActivity"
                        android:textSize="12sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="#AE9FE4"
                        android:background="@drawable/selector_create"
                        android:button="@null"
                        android:orientation="vertical" />

                    <RadioButton
                        android:id="@+id/rb_service_labour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawablePadding="2dp"
                        android:drawableTop="@drawable/service"
                        android:text="@string/serviceActivity"
                        android:textSize="12sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="#F38D92"
                        android:background="@drawable/selector_service"
                        android:button="@null"
                        android:orientation="vertical" />

                    <RadioButton
                        android:id="@+id/rb_other_labour"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:drawablePadding="2dp"
                        android:drawableTop="@drawable/other"
                        android:text="@string/otherActivity"
                        android:textSize="12sp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textColor="#A3B4F1"
                        android:background="@drawable/selector_other"
                        android:button="@null"
                        android:orientation="vertical" />

                </RadioGroup>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/current_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:layoutManager="LinearLayoutManager"
                        tools:listitem="@layout/item_labour_activity"
                        />
                </RelativeLayout>


            </LinearLayout>

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>